# PlanningSup

./: .codebook.toml  .dockerignore  .eslintrc.js  .gitignore  .ncurc.json  .npmrc  .yarnrc.yml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.bun  README.md  TESTING.md  bun.lockb  bunfig.toml  capacitor.config.json  docker-compose-dev-arm64.yml  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.prod.yml  docker-compose.test-auth.yml  docker-compose.test.yml  docker-compose.yml  edt.sql  eslint.config.js  nodemon.json  nuxt.config.js  package-lock.json  package.json  playwright.config.ts  playwright.dev.config.ts  pnpm-lock.yaml  vuetify.options.js
.claude/: settings.json
.github/: FUNDING.yml
.zed/: settings.json
android/: build.gradle
api/: db.js  index.js  utils.js
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: lib.rs  main.rs
assets/: plannings.json  url.json  variables.scss
cli/: README.md
components/: Bottom.vue  Crous.vue  DialogCrous.vue  DialogNewPlanning.vue  DialogSettings.vue  ErrorAlert.vue  EventBottom.vue  HelpInfo.vue  SelectPlanning.vue  Settings.vue  Snackbar.vue  TimezoneSelector.vue  crous.vue
config/: config.json  custom-environment-variables.json  default.json  development.json  production.json
jobs/: fetchWorker.js  updatePlannings.js
layouts/: default.vue
pages/: index.vue
patches/: @volar%2Ftypescript@2.4.28.patch  cal-parser+1.0.2.patch  eslint-plugin-perfectionist@4.15.0.patch
(+354 files in other folders)
